# nautilus-adapter-rakutenwallet

./: .gitignore  Cargo.toml  README.md  REMAINING_WORK.md  pyproject.toml
nautilus_rakutenwallet/: __init__.py  config.py  constants.py  data.py  execution.py  factories.py  providers.py  types.py
src/: error.rs  lib.rs  rate_limit.rs
src/client/: data_client.rs  execution_client.rs  mod.rs  rest.rs
src/model/: account.rs  market_data.rs  mod.rs  order.rs  orderbook.rs
tests/: conftest.py  test_config.py  test_constants.py  test_types.py
